Chrome: fixing Add button wrap

--- a/components/tools/OmeroWeb/omeroweb/webclient/static/webclient/css/layout.css
+++ b/components/tools/OmeroWeb/omeroweb/webclient/static/webclient/css/layout.css
@@ -2341,7 +2341,7 @@ input#id_tag {
     vertical-align: top;
 }
 textarea#tag_description {
-    width: 474px;
+    width: 464px;
     height: 1.1em;
     margin: 0 5px 0 10px;
     vertical-align: top;
